  * pkill: Check for lt- variants of program name          issue #192
  * ps: Add OOM and OOMADJ fields                          issue #198
  * ps: Add IO Accounting fields                           issue #184
  * ps: Add PSS and USS fields                             issue #112
  * ps: Add two new autogroup fields
  * slabtop: Don't combine d and o options                 issue #160
  * sysctl: Check resolved path to be under /proc/sys      issue #179
  * top: added LOGID similar to 3.3.13 ps LUID
  * top: added EXE identical to 3.3.17 ps EXE
  * top: exploit some library smaps_rollup provisions      issue #112
  * top: added four new IO accounting fields               issue #184
  * top: 'F' key is now a new forest view 'focus' toggle
  * top: summary area memory lines can print two abreast
  * top: added two new autogroup fields
  * top: added long versions of command line options

procps-ng-3.3.17
---------------
  * library: Incremented to 8:3:0
    (no removals or additions, internal changes only)
  * all: properly handle utf8 cmdline translations         issue #176
  * kill: Pass int to signalled process                    merge #32
  * pgrep: Pass int to signalled process                   merge #32
  * pgrep: Check sanity of SG_ARG_MAX                      issue #152
  * pgrep: Add older than selection                        merge #79
  * pidof: Quiet mode                                      merge #83
  * pidof: show worker threads                             Redhat #1803640
  * ps.1: Mention stime alias                              issue #164
  * ps: check also match on truncated 16 char comm names
  * ps: Add exe output option                              Redhat #1399206
  * pwait: New command waits for a process                 merge #97
  * sysctl: Match systemd directory order                  Debian #950788
  * sysctl: Document directory order                       Debian #951550